--- a/sec/title.tex
+++ b/sec/title.tex
@@ -2,6 +2,7 @@
 \usepackage{lipsum}
 
 \begin{document}
+\begin{titlingpage}
 	\begin{center}
 		Author One\\
 		Author Two\\
@@ -15,4 +16,5 @@
 		Independent Publishing\\
 		No Rights Reserved
 	\end{center}
+\end{titlingpage}
 \end{document}
