--- a/sec/chapter3.tex
+++ b/sec/chapter3.tex
@@ -7,7 +7,7 @@
 
 	\begin{poem*}{Ozymandias}{Percy Bysshe Shelley}
 		I met a traveller from an antique land, \\
-		Who said, "Two vast and trunkless legs of stone \\
+		Who said, ``Two vast and trunkless legs of stone \\
 		Stand in the desert. Near them, on the sand, \\
 		Half sunk, a shattered visage lies, whose frown,\\
 		And wrinkled lip, and sneer of cold command,\\
@@ -19,29 +19,42 @@
 		Look on my works, ye Mighty, and despair!'\\
 		Nothing beside remains. Round the decay\\
 		Of that Colossal Wreck, boundless and bare,\\
-		The lone and level sands stretch far away."\\
+		The lone and level sands stretch far away.''\\
 	\end{poem*}
-
 	
 	\begin{poem*}{Invictus}{William Henley}
 		Out of the night that covers me,\\
 		\hspace{2em}Black as the pit from pole to pole,\\
 		I thank whatever gods may be\\
 		\hspace{2em}For my unconquerable soul.\\[12pt]
-
 		In the fell clutch of circumstance\\
 		\hspace{2em}I have not winced nor cried aloud.\\
 		Under the bludgeonings of chance\\
 		\hspace{2em}My head is bloody, but unbowed.\\[12pt]
-
 		Beyond this place of wrath and tears\\
 		\hspace{2em}Looms but the Horror of the shade,\\
 		And yet the menace of the years\\
 		\hspace{2em}Finds and shall find me unafraid.\\[12pt]
-
 		It matters not how strait the gate,\\
 		\hspace{2em}How charged with punishments the scroll,\\
 		I am the master of my fate,\\
 		\hspace{2em}I am the captain of my soul.\\
+	\end{poem*}
+
+	\begin{poem*}{Hot Air Balloon}{Rebecca J. Gomez}
+		\centering
+		from down\\
+		below I wave hello\\
+		to a man standing in\\
+		a basket, a basket hang\\
+		ing from a balloon, a ball\\
+		oon filled with hot air\\
+		that keeps it pre\\
+		cariously,\\
+		scario\\
+		us\\
+		ly\\ 
+		al\\
+		\textbf{oft}
 	\end{poem*}
 \end{document}
